--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cesium-navigation-es6",
-  "version": "1.0.8",
+  "version": "1.0.0",
   "description": "cesium-navigation-es6",
   "main": "viewerCesiumNavigationMixin.js",
   "scripts": {
@@ -11,7 +11,6 @@
     "url": "git+https://github.com/richard1015/cesium-navigation-es6.git"
   },
   "dependencies": {
-    "cesium": "^1.52.0",
     "hammerjs": "^2.0.8",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
@@ -21,7 +20,7 @@
   "keywords": [
     "cesium-navigation"
   ],
-  "author": "richard",
+  "author": "richard, zouyaoji <370681295@qq.com> (https://github.com/zouyaoji)",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/richard1015/cesium-navigation-es6/issues"
